Added functionality to geometry-subdivision qt-example
There are still issues with the WaltHead and Suzanne geometries.

--- a/qt-examples/geometry-subdivision/geometry-subdivision.qrc
+++ b/qt-examples/geometry-subdivision/geometry-subdivision.qrc
@@ -8,5 +8,6 @@
         <file>geometry-subdivision.qml</file>
         <file alias="OrbitControls.js">../js/controls/OrbitControls.js</file>
         <file alias="ControlEventSource.qml">../qml/controls/ControlEventSource.qml</file>
+        <file alias="helvetiker_regular.typeface.js">../../examples/fonts/helvetiker_regular.typeface.js</file>
     </qresource>
 </RCC>
